--- a/node/contentModule/views/cars.html
+++ b/node/contentModule/views/cars.html
@@ -12,19 +12,23 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <link rel='stylesheet' href='/stylesheets/style.css' type='text/css' />
+        <link rel='stylesheet' href='style.css' type='text/css' />
     </head>
     <body>
         <div class='container'>
             <div class='row'>
                 <div class='col col-lg-4 col-md-6 col-sm-12'>
-                    <img src='../images/1' alt='not here'>
+                    <img src='gt350.jpg' alt='not here'>
                 </div>
                 <div class='col col-lg-4 col-md-6 col-sm-12'>
-                    <img src='../images/2' alt='not here'>
+                    <img src='GTR2.jpg' alt='not here'>
                 </div>
-                <div class='col col-lg-4 col-md-6 col-sm-12'></div>
-                <div class='col col-lg-4 col-md-6 col-sm-12'></div>
+                <div class='col col-lg-4 col-md-6 col-sm-12'>
+                    <img src='nsx.jpg' alt='not here'>
+                </div>
+                <div class='col col-lg-4 col-md-6 col-sm-12'>
+                    <img src='supra.jpg' alt='not here'>
+                </div>
             </div>
         </div>
     </body>
