--- a/express/SWAPI/static/css/style.css
+++ b/express/SWAPI/static/css/style.css
@@ -7,7 +7,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     opacity: 0.9;
-    z-index: -1;
 }
 .header {
     min-height: 100px;
@@ -21,22 +20,26 @@
     margin: 0 auto;
 }
 .displayBox {
-    height: 500px;
+    height: 550px;
     width: 400px;
     border: 2px solid lightslategray;
     background-color: rgb(34, 4, 4);
     opacity: 0.8;
-    border-radius: 10px;
     margin: 0 auto;
+    border-radius: 10px;
+}
+#showTime {
+    height: 500px;
+    width: 400px;
+    margin: 10px auto;
     padding: 20px 40px;
     overflow: auto;
 }
-#hourglass {
-    margin: 0 auto;
+.progress {
+    background-color: rgb(34, 4, 4);
 }
-#hourglass img {
-    border-radius: 50%;
-    border: 1px solid lightslategray;
+.progress img {
+    margin: 0 auto;
 }
 .navi {
     margin: 0 auto;
