--- a/express/surveyForm.socket/views/index.ejs
+++ b/express/surveyForm.socket/views/index.ejs
@@ -1,66 +1,107 @@
 <!--
-    survey form  - express assignment using post
+    socket io survye from  - express assignment
 -->
 <!DOCTYPE html>
 <html lang='en'>
-    <head>
-        <meta meta charset='UTF-8'>
-        <meta name='name' content='codingDojo express survey form assignment'>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <link rel='stylesheet' href='/static/css/style.css' type='text/css' />
-        <style>
-            .container {
-                min-height: 450px;
-                margin: 20px auto;
-                padding-top: 200px;
-            }
-            .box {
-                width: 50%;
-                margin: 0 auto;
-                padding: 20px;
-                border: 1px solid lightgray;
-            }
+
+<head>
+    <meta meta charset='UTF-8'>
+    <meta name='name' content='codingDojo express survey form assignment'>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js'></script>
+    <style>
+        .container {
+            min-height: 450px;
+            margin: 20px auto;
+            padding-top: 100px;
+        }
+        .box {
+            width: 50%;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid lightgray;
+        }
+        #lucky {
+            margin: 0 auto;
+            width: 50%;
+            border: 1px solid black;
+            padding: 20px;
+            background-color: greenyellow;
+        }
         </style>
-    </head>
-    <body>
-        <div class='container'>
-            <div class='box'>
-                <h3>Ninja Survey Form</h3>
-                <form action='/submit' method='post'>
-                    <div class='form-group'>
-                        <label for='name'>Your Name:</label>
-                        <input type='text' class='form-control' name='name'>
-                    </div>
-                    <div class='form-group'>
-                        <label for='dojo'>Dojo Location:</label>
-                        <select class="form-control" name='dojo'>
-                            <option>San Jose</option>
-                            <option>Emeryville</option>
-                            <option>Seattle</option>
-                            <option>Tyson's Corner</option>
-                            <option>Chicago</option>
-                        </select>
-                    </div>
-                    <div class='form-group'>
-                        <label for='lango'>Favorite Language:</label>
-                        <select class="form-control" name='lango'>
-                            <option>Python</option>
-                            <option>JavaScript</option>
-                            <option>Java</option>
-                            <option>C++</option>
-                            <option>C#</option>
-                        </select>
-                    </div>
-                    <div class='form-group'>
-                        <label for='comment'>Comments: (optional)</label>
-                        <textarea name='comment' class='form-control' rows='3'></textarea>
-                    </div>
-                        <input type='submit' class='form-control btn btn-secondary'>
-                </form>
-            </div>
+</head>
+
+<body>
+    <div class='container'>
+        <div id='lucky' hidden></div>
+        <div class='box'>
+            <h3>Ninja Survey Form (Socket to Me)</h3>
+            <form id='sockForm' action='/submit' method='post'>
+                <div class='form-group'>
+                    <label for='name'>Your Name:</label>
+                    <input type='text' class='form-control' name='name'>
+                </div>
+                <div class='form-group'>
+                    <label for='dojo'>Dojo Location:</label>
+                    <select class="form-control" name='dojo'>
+                        <option>San Jose</option>
+                        <option>Emeryville</option>
+                        <option>Seattle</option>
+                        <option>Tyson's Corner</option>
+                        <option>Chicago</option>
+                    </select>
+                </div>
+                <div class='form-group'>
+                    <label for='lango'>Favorite Language:</label>
+                    <select class="form-control" name='lango'>
+                        <option>Python</option>
+                        <option>JavaScript</option>
+                        <option>Java</option>
+                        <option>C++</option>
+                        <option>C#</option>
+                    </select>
+                </div>
+                <div class='form-group'>
+                    <label for='comment'>Comments: (optional)</label>
+                    <textarea name='comment' class='form-control' rows='3'></textarea>
+                </div>
+                <input type='submit' class='form-control btn btn-secondary'>
+            </form>
         </div>
-    </body>
+    </div>
+    <script>
+        $(document).ready(function () {
+            var socket = io();
+            socket.on('greeting', function (data) {
+                console.log(data.msg);
+                socket.emit('thankyou', { msg: 'Thank you for connecting me! -Client' });
+            });
+            socket.on('lucky number', function (data) {
+                let output = '<p>You emitted the following info to the server: ';
+                output += ' name: ' + data.name + ' location: ' + data.dojo + ' fav. language: ' + data.lango;
+                output += ' comment: ' + data.comment + '</p>';
+                output += '</p>Your lucky number is >> ' + data.number + ' <<';
+                $('#lucky').removeAttr('hidden');
+                $('#lucky').html(output);
+            })
+            socket.on('connections', function() {
+                
+            }
+            $('#sockForm').submit(function (e) {
+                e.preventDefault();
+                socket.emit('submit form', $(this).serialize());
+                console.log('data sent');
+                return false;
+            });
+        });
+    </script>
+</body>
+
 </html>
