--- a/mongo/loginRegistration/client/views/index.ejs
+++ b/mongo/loginRegistration/client/views/index.ejs
@@ -24,7 +24,9 @@
             <h1 class='text-secondary'>Login &#38; Registration</h1>
             <div class='flash'>
             <% if (error) { %>
-                <p class='text-danger'><%= error %></p>
+                <% for (let err of error) { %>
+                    <p class='text-danger'><%= err %></p>
+                <% } %>
             <% } %> 
             <% if (success) { %>
                 <p class='text-success'><%= success %></p>
