--- a/angular/authors/authors/src/app/home/home.component.html
+++ b/angular/authors/authors/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             <tr *ngFor='let author of authors'>
                 <td>{{ author.name }}</td>
                 <td>
-                    <button class='btn btn-sm btn-info mx-1' routerLink='/edit/{{author._id}}'>Edit</button>
+                    <button class='btn btn-sm btn-info mx-1' [routerLink]='["/edit", author._id]'>Edit</button>
                     <button class='btn btn-sm btn-danger mx-1' (click)='deleteAuthor(author._id)'>Delete</button>
                 </td>
             </tr>
