--- a/angular/teamManager/team/src/app/status/game/game.component.css
+++ b/angular/teamManager/team/src/app/status/game/game.component.css
@@ -3,3 +3,19 @@
     border: 2px solid purple;
     padding: 20px;
 }
+
+.green {
+    background-color: green;
+}
+
+.default {
+    background-color: none;
+}
+
+.yellow {
+    background-color:  yellow;
+}
+
+.red {
+    background-color: red;
+}
